// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create Sale Schedular Container should fire switch form 1`] = `
<div>
  <div
    class="sc-fmciRz frLkYs meta-form-container"
  >
    <span
      class="ant-typography sc-eXlEPa fyIWMy"
    >
      book_title_0x9c1b1c10406d11757067f03ce14a875c18a24e88_6_5_3
    </span>
    <div
      class="ant-card ant-card-bordered sc-iFMAIt gHlmXc"
    >
      <div
        class="ant-card-body"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
          id="sale-scheduling-form"
        >
          <div
            class="ant-row ant-form-item ant-form-item-has-success"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline"
                    id="sale-scheduling-form_salesType"
                  >
                    <label
                      class="ant-radio-wrapper"
                    >
                      <span
                        class="ant-radio"
                      >
                        <input
                          checked=""
                          class="ant-radio-input"
                          type="radio"
                          value="BuyNow"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Buy Now
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper ant-radio-wrapper-checked"
                    >
                      <span
                        class="ant-radio ant-radio-checked"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Auction"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Auction
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper"
                    >
                      <span
                        class="ant-radio"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Launch"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Launch Event
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="sale-scheduling-form_price"
                title="Price (ETHER)"
              >
                Price (ETHER)
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-input-number"
                  >
                    <div
                      class="ant-input-number-handler-wrap"
                    >
                      <span
                        aria-disabled="false"
                        aria-label="Increase Value"
                        class="ant-input-number-handler ant-input-number-handler-up"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="up"
                          class="anticon anticon-up ant-input-number-handler-up-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-disabled="false"
                        aria-label="Decrease Value"
                        class="ant-input-number-handler ant-input-number-handler-down"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-input-number-handler-down-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="0"
                        autocomplete="off"
                        class="ant-input-number-input"
                        data-testid="input-N"
                        id="sale-scheduling-form_price"
                        placeholder="Number of ethers"
                        role="spinbutton"
                        step="0.01"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-iqVWFU eEDOcU"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_royalty"
                  title=""
                >
                  <span
                    class="label-text"
                  >
                    Royalty on 
                    <label>
                      book
                    </label>
                     sale (%)
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-input-number"
                    >
                      <div
                        class="ant-input-number-handler-wrap"
                      >
                        <span
                          aria-disabled="false"
                          aria-label="Increase Value"
                          class="ant-input-number-handler ant-input-number-handler-up"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="up"
                            class="anticon anticon-up ant-input-number-handler-up-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-disabled="false"
                          aria-label="Decrease Value"
                          class="ant-input-number-handler ant-input-number-handler-down"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-input-number-handler-down-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemax="100"
                          aria-valuemin="0"
                          autocomplete="off"
                          class="ant-input-number-input"
                          data-testid="royalty-on-sale"
                          id="sale-scheduling-form_royalty"
                          placeholder="Royalty percentage"
                          role="spinbutton"
                          step="0.01"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item-extra"
                >
                  This is the amount you get whenever a book is sold
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_maxSupply"
                  title="copies available"
                >
                  copies available
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-input-number"
                    >
                      <div
                        class="ant-input-number-handler-wrap"
                      >
                        <span
                          aria-disabled="false"
                          aria-label="Increase Value"
                          class="ant-input-number-handler ant-input-number-handler-up"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="up"
                            class="anticon anticon-up ant-input-number-handler-up-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-disabled="false"
                          aria-label="Decrease Value"
                          class="ant-input-number-handler ant-input-number-handler-down"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-input-number-handler-down-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="1"
                          autocomplete="off"
                          class="ant-input-number-input"
                          id="sale-scheduling-form_maxSupply"
                          placeholder="Enter number of copies"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-iqVWFU eEDOcU"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_endDate"
                  title="End date"
                >
                  End date
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          autocomplete="off"
                          id="sale-scheduling-form_endDate"
                          placeholder="Select date"
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item submit-row"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="submit"
                  >
                    <span>
                      Schedule Sale 
                    </span>
                    <i
                      class="mc-arrow-right-2-line mc-lg"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Create Sale Schedular Container should match with snapshot 1`] = `
<div>
  <div
    class="sc-fmciRz frLkYs meta-form-container"
  >
    <span
      class="ant-typography sc-eXlEPa fyIWMy"
    >
      book_title_0x9c1b1c10406d11757067f03ce14a875c18a24e88_6_5_3
    </span>
    <div
      class="ant-card ant-card-bordered sc-iFMAIt gHlmXc"
    >
      <div
        class="ant-card-body"
      >
        <form
          class="ant-form ant-form-vertical ant-form-hide-required-mark"
          id="sale-scheduling-form"
        >
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-radio-group ant-radio-group-outline"
                    id="sale-scheduling-form_salesType"
                  >
                    <label
                      class="ant-radio-wrapper ant-radio-wrapper-checked"
                    >
                      <span
                        class="ant-radio ant-radio-checked"
                      >
                        <input
                          checked=""
                          class="ant-radio-input"
                          type="radio"
                          value="BuyNow"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Buy Now
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper"
                    >
                      <span
                        class="ant-radio"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Auction"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Auction
                      </span>
                    </label>
                    <label
                      class="ant-radio-wrapper"
                    >
                      <span
                        class="ant-radio"
                      >
                        <input
                          class="ant-radio-input"
                          type="radio"
                          value="Launch"
                        />
                        <span
                          class="ant-radio-inner"
                        />
                      </span>
                      <span>
                        Launch Event
                      </span>
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item"
          >
            <div
              class="ant-col ant-form-item-label"
            >
              <label
                class="ant-form-item-required"
                for="sale-scheduling-form_price"
                title="Price (ETHER)"
              >
                Price (ETHER)
              </label>
            </div>
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-input-number"
                  >
                    <div
                      class="ant-input-number-handler-wrap"
                    >
                      <span
                        aria-disabled="false"
                        aria-label="Increase Value"
                        class="ant-input-number-handler ant-input-number-handler-up"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="up"
                          class="anticon anticon-up ant-input-number-handler-up-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="up"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                      <span
                        aria-disabled="false"
                        aria-label="Decrease Value"
                        class="ant-input-number-handler ant-input-number-handler-down"
                        role="button"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-input-number-handler-down-inner"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                    <div
                      class="ant-input-number-input-wrap"
                    >
                      <input
                        aria-valuemin="0"
                        autocomplete="off"
                        class="ant-input-number-input"
                        data-testid="input-N"
                        id="sale-scheduling-form_price"
                        placeholder="Number of ethers"
                        role="spinbutton"
                        step="0.01"
                        type="number"
                        value=""
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-iqVWFU eEDOcU"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_royalty"
                  title=""
                >
                  <span
                    class="label-text"
                  >
                    Royalty on 
                    <label>
                      book
                    </label>
                     sale (%)
                  </span>
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-input-number"
                    >
                      <div
                        class="ant-input-number-handler-wrap"
                      >
                        <span
                          aria-disabled="false"
                          aria-label="Increase Value"
                          class="ant-input-number-handler ant-input-number-handler-up"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="up"
                            class="anticon anticon-up ant-input-number-handler-up-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-disabled="false"
                          aria-label="Decrease Value"
                          class="ant-input-number-handler ant-input-number-handler-down"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-input-number-handler-down-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemax="100"
                          aria-valuemin="0"
                          autocomplete="off"
                          class="ant-input-number-input"
                          data-testid="royalty-on-sale"
                          id="sale-scheduling-form_royalty"
                          placeholder="Royalty percentage"
                          role="spinbutton"
                          step="0.01"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item-extra"
                >
                  This is the amount you get whenever a book is sold
                </div>
              </div>
            </div>
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_maxSupply"
                  title="copies available"
                >
                  copies available
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-input-number"
                    >
                      <div
                        class="ant-input-number-handler-wrap"
                      >
                        <span
                          aria-disabled="false"
                          aria-label="Increase Value"
                          class="ant-input-number-handler ant-input-number-handler-up"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="up"
                            class="anticon anticon-up ant-input-number-handler-up-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="up"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-disabled="false"
                          aria-label="Decrease Value"
                          class="ant-input-number-handler ant-input-number-handler-down"
                          role="button"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-input-number-handler-down-inner"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                      <div
                        class="ant-input-number-input-wrap"
                      >
                        <input
                          aria-valuemin="1"
                          autocomplete="off"
                          class="ant-input-number-input"
                          id="sale-scheduling-form_maxSupply"
                          placeholder="Enter number of copies"
                          role="spinbutton"
                          step="1"
                          type="number"
                          value=""
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-iqVWFU eEDOcU"
          >
            <div
              class="ant-row ant-form-item"
            >
              <div
                class="ant-col ant-form-item-label"
              >
                <label
                  class="ant-form-item-required"
                  for="sale-scheduling-form_endDate"
                  title="End date"
                >
                  End date
                </label>
              </div>
              <div
                class="ant-col ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-picker"
                    >
                      <div
                        class="ant-picker-input"
                      >
                        <input
                          autocomplete="off"
                          id="sale-scheduling-form_endDate"
                          placeholder="Select date"
                          readonly=""
                          size="12"
                          title=""
                          value=""
                        />
                        <span
                          class="ant-picker-suffix"
                        >
                          <span
                            aria-label="calendar"
                            class="anticon anticon-calendar"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="calendar"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M880 184H712v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H384v-64c0-4.4-3.6-8-8-8h-56c-4.4 0-8 3.6-8 8v64H144c-17.7 0-32 14.3-32 32v664c0 17.7 14.3 32 32 32h736c17.7 0 32-14.3 32-32V216c0-17.7-14.3-32-32-32zm-40 656H184V460h656v380zM184 392V256h128v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h256v48c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8v-48h128v136H184z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-row ant-form-item submit-row"
          >
            <div
              class="ant-col ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <button
                    class="ant-btn ant-btn-primary"
                    type="submit"
                  >
                    <span>
                      Schedule Sale 
                    </span>
                    <i
                      class="mc-arrow-right-2-line mc-lg"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
